# hsp_dispatch_service/transport/grpc/server.py
@@ -1,13 +1,16 @@
 import grpc
 
 from hsp_dispatch_service.config import Settings
-from hsp_dispatch_service.service.echo_service import EchoService
-from hsp_dispatch_service.transport.grpc.service import EchoGrpcService
-from rpc.echo.v1 import echo_pb2_grpc
+from hsp_dispatch_service.service.dispatch_service import DispatchService
+from hsp_dispatch_service.transport.grpc.service import DispatchGrpcService
+from rpc.dispatch.v1 import dispatch_pb2_grpc
 
 
-def build_grpc_server(settings: Settings, echo_service: EchoService) -> grpc.aio.Server:
+def build_grpc_server(settings: Settings, dispatch_service: DispatchService) -> grpc.aio.Server:
     server = grpc.aio.server()
-    echo_pb2_grpc.add_EchoServiceServicer_to_server(EchoGrpcService(echo_service), server)
+    dispatch_pb2_grpc.add_DispatchServiceServicer_to_server(
+        DispatchGrpcService(dispatch_service),
+        server,
+    )
     server.add_insecure_port(f"{settings.grpc_host}:{settings.grpc_port}")
     return server
